Fixed the settlement logic